--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,27 +1,34 @@
-name: Deploy FastAPI on EC2
+name: Deploy FastAPI to EC2
 
 on:
   push:
     branches:
-      - master
+      - main  # Remplacement de 'master' par 'main' si applicable
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 📥 Récupérer le code
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: 📡 Se connecter à l'instance EC2
-      uses: appleboy/ssh-action@v0.1.4
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ubuntu
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        script: |
-          cd ~/fastapi-app || git clone https://github.com/SEU_NOM_UTILISATEUR/fastapi-app.git ~/fastapi-app
-          cd ~/fastapi-app
-          git pull origin main
-          docker-compose down
-          docker-compose up -d --build
+    - name: Build Docker image
+      run: |
+        docker build -t fastapi-app .
+
+    - name: Push Docker image to EC2
+      env:
+        HOST: ${{ secrets.EC2_HOST }}
+        USER: ${{ secrets.EC2_USER }}
+        KEY: ${{ secrets.EC2_KEY }}
+      run: |
+        # Copier l'image Docker sur l'instance EC2
+        docker save fastapi-app | bzip2 | ssh -i $KEY $USER@$HOST "bunzip2 | docker load"
+
+        # Démarrer le conteneur sur EC2
+        ssh -i $KEY $USER@$HOST "
+          docker stop fastapi-container || true && \
+          docker rm fastapi-container || true && \
+          docker run -d --name fastapi-container -p 80:80 fastapi-app
+        "
