--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy FastAPI to EC2
+name: Deploy FastAPI on EC2
 
 on:
   push:
@@ -10,29 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: 📥 Récupérer le code
       uses: actions/checkout@v3
 
-    - name: Configure SSH Key
-      run: |
-        echo "${{ secrets.EC2_KEY }}" > ec2-key.pem
-        chmod 400 ec2-key.pem
-
-    - name: Build Docker Image
-      run: |
-        docker build -t fastapi-app .
-
-    - name: Transfer and Run Docker Image on EC2
-      env:
-        HOST: ${{ secrets.EC2_HOST }}
-        USER: ${{ secrets.EC2_USER }}
-      run: |
-        # Transférer l'image Docker
-        docker save fastapi-app | bzip2 | ssh -i ec2-key.pem $USER@$HOST "bunzip2 | docker load"
-
-        # Démarrer le conteneur
-        ssh -i ec2-key.pem $USER@$HOST "
-          docker stop fastapi-container || true && \
-          docker rm fastapi-container || true && \
-          docker run -d --name fastapi-container -p 80:80 fastapi-app
-        "
+    - name: 📡 Se connecter à l'instance EC2
+      uses: appleboy/ssh-action@v0.1.4
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ubuntu
+        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        script: |
+          cd ~/fastapi-app || git clone https://github.com/kokou-stm/fastapi_aws.git ~/fastapi-app
+          cd ~/fastapi-app
+          git pull origin main
+          docker-compose down
+          docker-compose up -d --build
