--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,46 +1,26 @@
-name: 🚀 Deploy FastAPI to AWS EC2
+name: Deploy FastAPI to EC2
 
 on:
   push:
     branches:
-      - master  # Déclenchement uniquement sur master
+      - master
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: 📡 Ajouter la clé privée SSH sur le runner GitHub
-        run: |
-          echo "${{ secrets.EC2_KEY }}" > ec2_key.pem
-          chmod 600 ec2_key.pem
+    - name: Build Docker image
+      run: docker build -t fastapi-app .
 
-      - name: 🛠️ Déployer sur l'instance EC2
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ec2_key.pem ubuntu@${{ secrets.EC2_HOST }} << 'EOF'
-            # Vérifier si le dossier existe, sinon cloner
-            if [ ! -d "~/fastapi-app" ]; then
-              git clone https://github.com/kokou-stm/fastapi_aws.git ~/fastapi-app
-            fi
-            cd ~/fastapi-app
-            git pull origin master  # Récupérer les dernières modifications
-            
-            # Arrêter le conteneur existant s'il y en a un
-            docker stop fastapi-container || true
-            docker rm fastapi-container || true
-            
-            # Supprimer l'image précédente
-            docker rmi fastapi-image || true
-            
-            # Recréer l'image Docker
-            docker build -t fastapi-image .
-            
-            # Démarrer le conteneur
-            docker run -d --name fastapi-container -p 80:8000 fastapi-image
-          EOF
-
-      - name: ✅ Nettoyage des fichiers temporaires
-        run: rm -f ec2_key.pem
+    - name: Push Docker image to EC2
+      env:
+        HOST: ${{ secrets.EC2_HOST }}
+        USER: ${{ secrets.EC2_USER }}
+        KEY: ${{ secrets.EC2_KEY }}
+      run: |
+        scp -i $KEY docker-compose.yml $USER@$HOST:/home/$USER/
+        ssh -i $KEY $USER@$HOST "docker-compose up -d"
